[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
arc-swap = "1.6"
url = "2.4"

[lib]
name = "chat_server"
path = "src/lib.rs"
