[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
arc-swap = "1.6"
url = "2.4"
crossbeam = "0.8"
num_cpus = "1.16"
parking_lot = "0.12"
ahash = "0.8"
flume = "0.11"

[lib]
name = "chat_server"
path = "src/lib.rs"
